Add login request/response models
